--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stylize",
+  "name": "stylize-core",
   "version": "0.0.0",
   "description": "The core of Stylize",
   "main": "stylize.js",
