--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "diveSync": "^0.3.0",
     "fs-extra": "^0.22.1",
     "lodash": "^3.10.0",
+    "parse5": "^1.5.0",
     "read-yaml": "^1.0.0"
   },
   "devDependencies": {
